syntax = "proto3";

package com.example;

message OrderIdRequest {
  int64 orderId = 1;

}

message OrderIdResponse {
  bool isExist = 1;

}

service CourierService {
  rpc existById(OrderIdRequest) returns (OrderIdResponse);

}